3.0911:
 - Add: Reduce opacity for less-well-controlled stars.
 - Add: Upped limit of how many ships that could be ordered via Shipyard to 600.
 - Add: Fleet limit increased to 600 per send.
 - Add: Excavator distance shown in Arch Min.

3.0910:
 - Add: Unread option in inbox UI
 - Add: view_unread Inbox API
 - Add: Stations auto-seize
 - Add: Voting allowed in embassy
 - Fix: If star is a target, no grouping.
 - Fix: Detonators work properly on arrival.
 - Fix: Offline Essentia veins can be repaired again in UI.
 - Mod: Stations sort to bottom of UI list.
 - Fix: Allied fighters let allies past.
 - Add: Members Only Station law added.
 - Add: BHG Passport law added.

3.0909:
 - Add: Admin UI to set alliance logo.
 - Add: Admin UI display more info on bodies & stars.
 - Fix: Only one notification per empire per star on probe detection.
 - Add: Fleet Lite
 - Mod: Sweepers adjusted for balance.
 - Fix: Most buildings should no longer ignore uni level.
 - Add: Overheating Parliament does damage.
 - Fix: Buildings should no longer get stuck in upgrading state.
 - Add: Allow login with "#<userid>".
 - Mod: "#" no longer permitted as leading character in empire names.
 - Mod: Propaganda doesn't count as often for missions.
 - Mod: incoming ships list ordered correctly.
 - Fix: Spies doing "Political Propaganda" and "Security Sweep" can be Assassinated/Abducted.
 - Add: Essentia veins can be drained.
 - Mod: Archaeology searches now take 5 hours, 50 minutes to complete. (thanks tmtowtdi!)
 - Mod: Bleeders replicate.
 - Mod: Disable chat for sitters.
 - Add: pod_delay returned as part of PCC view
 - Mod: Minimum flight time: 5 Minutes, Maximum is 2 months.
 - Add: Build queue stats (size, len) returned as part of body status.
 - UI : most IDs are available in the UI.
 - Fix: If alliance member self destructs, station passed to leader.
 - Fix: log real IPs in login log.
 - Fix: Speed up N19 news display.
 - Add: Added flip medal.
 - Mod: Profanity filtering is more clear.